--- a/www/bower.json
+++ b/www/bower.json
@@ -24,6 +24,7 @@
   ],
   "dependencies": {
     "polymer": "Polymer/polymer#1.1.0",
-    "paper-button": "PolymerElements/paper-button#~1.0.8"
+    "paper-button": "PolymerElements/paper-button#~1.0.8",
+    "iron-input": "PolymerElements/iron-input#~1.0.6"
   }
 }
