--- a/www/bower.json
+++ b/www/bower.json
@@ -25,6 +25,9 @@
   "dependencies": {
     "polymer": "Polymer/polymer#1.1.0",
     "paper-button": "PolymerElements/paper-button#~1.0.8",
-    "iron-input": "PolymerElements/iron-input#~1.0.6"
+    "iron-input": "PolymerElements/iron-input#~1.0.6",
+    "iron-autogrow-textarea": "PolymerElements/iron-autogrow-textarea#~1.0.7",
+    "paper-card": "PolymerElements/paper-card#~1.0.7",
+    "iron-component-page": "PolymerElements/iron-component-page#~1.0.8"
   }
 }
