--- a/www/package.json
+++ b/www/package.json
@@ -18,7 +18,11 @@
   "homepage": "https://github.com/ZombieHippie/javascript-commander#readme",
   "dependencies": {
     "async": "~1.4.2",
-    "babel-loader": "=5.0.0",
+    "babel-core": "^5.8.3",
+    "babel-eslint": "^3.1.23",
+    "babel-loader": "^5.3.1",
+    "babel-plugin-rewire": "^0.1.8",
+    "babel-runtime": "^5.6.15",
     "browser-store": "~1.0.2",
     "codemirror": "^5.7.0",
     "css-loader": "0.18.0",
